[package]
name = "btree"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { path = "../libs/tokio/tokio", version = "0.2", features = ["full"] }
buffer_pool = { path = "../buffer-pool" }
proptest = "0.10.1"
proptest-derive = "0.2.0"
async-recursion = "0.3.2"

[dev-dependencies]
insta = "0.16.1"
pretty-hex = "0.1.1"
