[package]
name = "buffer_pool"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { path = "../libs/tokio/tokio", version = "0.2", features = ["full"] }
bitvec = "0.17.3"
rand = "0.7.3"
log = "0.4"
env_logger = "0.7.1"
crossbeam-utils = "0.7"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.3", features = ["checkpoint"] }

[dev-dependencies]
assert_matches = "1.3.0"
