[package]
name = "table"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { path = "../libs/tokio/tokio", version = "0.2", features = ["full"] }
buffer_pool = { path = "../buffer-pool" }

[dev-dependencies]
assert_matches = "1.3.0"
